--- a/van2.html
+++ b/van2.html
@@ -587,7 +587,66 @@ var sentences=
 [67,70],
 [67,70],
 [258,262],
-[890,890]
+[890,890],
+     [79,83],
+[173,177],
+[75,79],
+[890,890],
+[196,200],
+[890,890],
+[890,890],
+[200,204],
+[478,482],
+[204,208],
+[890,890],
+[91,95],
+[159,163],
+[70,75],
+[151,155],
+[204,208],
+[890,890],
+[216,220],
+[890,890],
+[367,372],
+[341,345],
+[204,208],
+[890,890],
+[95,99],
+[890,890],
+[372,376],
+[367,372],
+[134,138],
+[890,890],
+[70,75],
+[491,495],
+[91,95],
+[890,890],
+[233,236],
+[326,330],
+[890,890],
+[890,890],
+[230,233],
+[890,890],
+[890,890],
+[890,890],
+[180,184],
+[180,184],
+[196,200],
+[890,890],
+[890,890],
+[890,890],
+[187,192],
+[200,204],
+[478,482],
+[890,890],
+[890,890],
+[75,79],
+[410,414],
+[890,890],
+[890,890],
+[200,204],
+[478,482],
+[95,99]
 
    ], 'Con cú khôn ngoan',
     [
@@ -774,7 +833,66 @@ var sentences=
 'phải',
 'sai',
 'lầm',
-'gì.'
+'gì.',
+      'Thời',
+'gian',
+'trôi',
+'qua,',
+'con',
+'cú',
+'già',
+'khôn',
+'ngoan',
+'hơn,',
+'nó',
+'ngày',
+'một',
+'nói',
+'ít',
+'hơn',
+'và',
+'lắng',
+'nghe',
+'được',
+'nhiều',
+'hơn.',
+'Nhờ',
+'vậy,',
+'nó',
+'biết',
+'được',
+'tất',
+'cả',
+'mọi',
+'chuyện',
+'xảy',
+'ra',
+'xung',
+'quanh,',
+'dù',
+'cho',
+'không',
+'có',
+'ở',
+'đó.',
+'Dần',
+'dần',
+'con',
+'cú',
+'già',
+'trở',
+'nên',
+'khôn',
+'ngoan',
+'hơn',
+'và',
+'nổi',
+'tiếng',
+'vì',
+'sự',
+'khôn',
+'ngoan',
+'ấy.'
 
      ],8
 
