--- a/van2.html
+++ b/van2.html
@@ -3805,7 +3805,626 @@ var sentences=
 'oàm oạp',
 'ộp oạp'
     ],8
+ ],
+['van.mp3', 
+   [
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890],
+[890,890]
+   ], 'Gấu con sâu răng',
+    [
+'Một',
+'hôm,',
+'vào',
+'ngày',
+'sinh',
+'nhật',
+'của',
+'Gấu',
+'con,',
+'các',
+'bạn',
+'của',
+'chú',
+'đến',
+'rất',
+'đông,',
+'Mèo',
+'và',
+'Thỏ',
+'mang',
+'bánh',
+'ga',
+'tô,',
+'các',
+'bạn',
+'chim',
+'mang',
+'các',
+'viên',
+'kẹo',
+'đủ',
+'màu',
+'sắc,',
+'Chó',
+'thì',
+'mang',
+'đến',
+'một',
+'hộp',
+'kẹo',
+'sôcôla,',
+'còn',
+'Rùa',
+'mang',
+'bánh',
+'bích',
+'qui…',
+'đến',
+'tặng',
+'Gấu.',
+'Gấu',
+'ta',
+'thích',
+'lắm,',
+'chú',
+'ăn',
+'rất',
+'ngon',
+'lành',
+'và',
+'không',
+'ngớt',
+'lời',
+'khen:',
+'Sao',
+'toàn',
+'thứ',
+'ngon',
+'thế',
+'này!',
+'Tôi',
+'cảm',
+'ơn',
+'các',
+'bạn',
+'Khi',
+'buổi',
+'tiệc',
+'sinh',
+'nhật',
+'đã',
+'tan,',
+'các',
+'bạn',
+'đã',
+'về',
+'hết,',
+'như',
+'thường',
+'lệ,',
+'Gấu',
+'con',
+'không',
+'đánh',
+'răng',
+'mà',
+'nhảy',
+'tót',
+'lên',
+'giường',
+'đi',
+'ngủ.',
+'Chỉ',
+'chờ',
+'có',
+'thế,',
+'chúng',
+'tôi',
+'–',
+'những',
+'con',
+'Sâu',
+'Răng',
+'nhảy',
+'ra',
+'mở',
+'tiệc',
+'linh',
+'đình,',
+'chúng',
+'tôi',
+'gặm,',
+'cậy,',
+'đục',
+'khoét',
+'những',
+'chiếc',
+'răng',
+'bám',
+'đầy',
+'bánh',
+'kẹo',
+'của',
+'Gấu',
+'con,',
+'Đêm',
+'đó',
+'Gấu',
+'con',
+'kêu',
+'gào',
+'thảm',
+'thiết',
+'vì',
+'đau',
+'nhức',
+'răng.',
+'Hôm',
+'sau,',
+'Gấu',
+'mẹ',
+'phải',
+'đưa',
+'Gấu',
+'con',
+'đến',
+'bác',
+'sĩ',
+'khám',
+'bệnh.',
+'Bác',
+'sĩ',
+'bảo:',
+'Này',
+'Gấu',
+'con,',
+'răng',
+'cháu',
+'sâu',
+'nhiều',
+'quá,',
+'phải',
+'chữa',
+'ngay',
+'thôi.',
+'Nếu',
+'để',
+'lâu',
+'sẽ',
+'bị',
+'sún',
+'hết',
+'đấy.',
+'Cháu',
+'nhớ',
+'là',
+'không',
+'nên',
+'ăn',
+'nhiều',
+'bánh',
+'kẹo,',
+'nhất',
+'là',
+'vào',
+'buổi',
+'tối.',
+'Hằng',
+'ngày',
+'phải',
+'đánh',
+'răng',
+'trước',
+'khi',
+'đi',
+'ngủ',
+'và',
+'sau',
+'khi',
+'ngủ',
+'dậy',
+'Nhớ',
+'lời',
+'bác',
+'sĩ',
+'dặn,',
+'ngày',
+'nào',
+'Gấu',
+'con',
+'cũng',
+'chăm',
+'chỉ',
+'đánh',
+'răng.',
+'Chú',
+'đánh',
+'răng',
+'rất',
+'cẩn',
+'thận,',
+'đánh',
+'mặt',
+'trước,',
+'mặt',
+'sau',
+'của',
+'răng',
+'theo',
+'đúng',
+'lời',
+'dặn',
+'của',
+'bác',
+'sĩ',
+'làm',
+'cho',
+'răng',
+'trắng',
+'bóng.',
+'Gấu',
+'con',
+'không',
+'ăn',
+'nhiều',
+'bánh',
+'kẹo',
+'mà',
+'ăn',
+'nhiều',
+'các',
+'chất',
+'bổ',
+'khác',
+'như',
+'thịt,',
+'cá,',
+'trứng,',
+'sữa,',
+'rau',
+'quả',
+'tươi,',
+'nên',
+'răng',
+'của',
+'chú',
+'trở',
+'nên',
+'chắc',
+'và',
+'khỏe',
+'hơn.',
+'Còn',
+'những',
+'chú',
+'Sâu',
+'Răng',
+'chúng',
+'tôi',
+'thì',
+'từ',
+'đấy',
+'không',
+'còn',
+'gì',
+'để',
+'ăn',
+'nữa',
+'nên',
+'phải',
+'chạy',
+'ra',
+'khỏi',
+'miệng',
+'Gấu',
+'con'
+    ],8
  ]
+
 
 
 
