--- a/van2.html
+++ b/van2.html
@@ -4423,6 +4423,258 @@ var sentences=
 'Gấu',
 'con'
     ],8
+ ],
+  ['van.mp3', 
+   [
+[159,163],
+[326,330],
+[212,216],
+[890,891],
+[75,79],
+[41,45],
+[890,891],
+[459,462],
+[333,337],
+[333,337],
+[396,399],
+[326,330],
+[134,138],
+[99,103],
+[890,891],
+[251,254],
+[454,456],
+[890,891],
+[159,163],
+[890,891],
+[890,891],
+[159,163],
+[275,278],
+[890,891],
+[230,233],
+[70,75],
+[53,57],
+[187,192],
+[890,891],
+[402,406],
+[890,891],
+[196,200],
+[67,70],
+[890,891],
+[79,83],
+[341,345],
+[396,399],
+[67,70],
+[251,254],
+[358,362],
+[254,258],
+[890,891],
+[91,95],
+[267,271],
+[890,891],
+[230,233],
+[890,891],
+[187,192],
+[45,49],
+[890,891],
+[890,891],
+[187,192],
+[91,95],
+[354,358],
+[230,233],
+[67,70],
+[240,244],
+[53,57],
+[67,70],
+[282,285],
+[890,891],
+[95,99],
+[890,891],
+[254,258],
+[159,163],
+[79,83],
+[890,891],
+[196,200],
+[67,70],
+[890,891],
+[212,216],
+[67,70],
+[37,41],
+[236,240],
+[890,891],
+[282,285],
+[425,429],
+[890,891],
+[890,891],
+[166,170],
+[323,326],
+[890,891],
+[349,354],
+[233,236],
+[53,57],
+[262,265],
+[41,45],
+[95,99],
+[890,891],
+[890,891],
+[890,891],
+[890,891],
+[45,49],
+[410,414],
+[890,891],
+[109,113],
+[296,300],
+[159,163],
+[95,99],
+[890,891],
+[254,258],
+[159,163],
+[890,891],
+[503,507],
+[396,399],
+[37,41],
+[890,891],
+[230,233],
+[326,330],
+[67,70],
+[890,891],
+[196,200],
+[67,70],
+[890,891],
+[890,891],
+[890,891],
+[890,891],
+[890,891],
+[230,233],
+[326,330],
+[120,123],
+[187,192],
+[45,49]
+   ], 'Cây Tre Trăm Đốt',
+    [
+'Một',
+'anh',
+'chàng',
+'mồ',
+'côi',
+'nghèo',
+'là',
+'Khoai',
+'tính',
+'tình',
+'hiền',
+'lành,',
+'chất',
+'phác',
+'đi',
+'làm',
+'thuê',
+'cho',
+'một',
+'phú',
+'ông.',
+'Một',
+'hôm,',
+'phú',
+'ông',
+'gọi',
+'cậu',
+'đến',
+'và',
+'muốn',
+'gả',
+'con',
+'gái',
+'cho',
+'với',
+'điều',
+'kiện',
+'phải',
+'làm',
+'việc',
+'chăm',
+'chỉ',
+'ngày',
+'đêm.',
+'Phú',
+'ông',
+'trở',
+'nên',
+'giàu',
+'có',
+'và',
+'đến',
+'ngày',
+'cưới,',
+'ông',
+'lại',
+'thách',
+'cậu',
+'phải',
+'tìm',
+'được',
+'cây',
+'tre',
+'trăm',
+'đốt',
+'mới',
+'gả',
+'con',
+'gái',
+'cho.',
+'Chàng',
+'trai',
+'vào',
+'rừng',
+'đi',
+'tìm',
+'kiếm',
+'và',
+'được',
+'Bụt',
+'giúp',
+'đỡ.',
+'Cuối',
+'cùng',
+'cậu',
+'đem',
+'theo',
+'cây',
+'tre',
+'trở',
+'về,',
+'chỉ',
+'sau',
+'tiếng',
+'hô',
+'“khắc',
+'nhập”',
+'một',
+'cây',
+'tre',
+'trăm',
+'đốt',
+'đã',
+'xuất',
+'hiện.',
+'Lão',
+'phú',
+'ông',
+'đành',
+'phải',
+'gả',
+'con',
+'gái',
+'cho',
+'và',
+'từ',
+'đó',
+'họ',
+'sống',
+'hạnh',
+'phúc',
+'bên',
+'nhau.'
+    ],8
  ]
 
 
