--- a/van2.html
+++ b/van2.html
@@ -4928,43 +4928,43 @@ function unhideVideo() {
 <table border=2>
 <tr>
 <td>
-<a href="#" onclick="playAllVideos()" style="font-size: 20px; text-decoration: none" > Play All Videos</a>
+<a onclick="playAllVideos()" style="font-size: 20px; text-decoration: none" > Play All Videos</a>
 </td>
 <td>
-<a href="#" onclick="pauseOrNot=true" style="font-size: 20px; text-decoration: none" > Pause = True </a>
+<a onclick="pauseOrNot=true" style="font-size: 20px; text-decoration: none" > Pause = True </a>
 </td>
 <td>
-<a href="#" onclick="pauseOrNot=false" style="font-size: 20px; text-decoration: none" > Pause = false </a>
+<a onclick="pauseOrNot=false" style="font-size: 20px; text-decoration: none" > Pause = false </a>
 </td>
 <td>
-<a href="#" onclick="moveForwardTimeindex()" style="font-size: 20px; text-decoration: none" > Move Forward Time Index </a>
+<a onclick="moveForwardTimeindex()" style="font-size: 20px; text-decoration: none" > Move Forward Time Index </a>
 </td>
 <td>
-<a href="#" onclick="moveBackwardTimeindex()" style="font-size: 20px; text-decoration: none" > Move Backward Time Index </a>
+<a onclick="moveBackwardTimeindex()" style="font-size: 20px; text-decoration: none" > Move Backward Time Index </a>
 </td>
 
 
 </tr>
 <tr>
 <td>
-<a href="#" onclick="updateRepeatTimes(1)" style="font-size: 20px; text-decoration: none" > Repeat Once </a>
+<a onclick="updateRepeatTimes(1)" style="font-size: 20px; text-decoration: none" > Repeat Once </a>
 </td>
 
 <td>
-<a href="#" onclick="updateRepeatTimes(2)" style="font-size: 20px; text-decoration: none" > Repeat Twice </a>
+<a onclick="updateRepeatTimes(2)" style="font-size: 20px; text-decoration: none" > Repeat Twice </a>
 </td>
 
 <td>
-<a href="#" onclick="updateRepeatTimes(3)" style="font-size: 20px; text-decoration: none" > Repeat 3 Times </a>
+<a onclick="updateRepeatTimes(3)" style="font-size: 20px; text-decoration: none" > Repeat 3 Times </a>
 </td>
 
 <td>
-<a href="#" onclick="updateRepeatTimes(4)" style="font-size: 20px; text-decoration: none" > Repeat 4 Times </a>
+<a onclick="updateRepeatTimes(4)" style="font-size: 20px; text-decoration: none" > Repeat 4 Times </a>
 </td>
 
 
 <td>
-<a href="#" onclick="updateRepeatTimes(5)" style="font-size: 20px; text-decoration: none" > Repeat 5 Times </a>
+<a onclick="updateRepeatTimes(5)" style="font-size: 20px; text-decoration: none" > Repeat 5 Times </a>
 </td>
 
 </tr>
@@ -4976,8 +4976,8 @@ function unhideVideo() {
 
 <br><br>
 
-<a href="#" onclick="hideVideo()" style="font-size: 30px; text-decoration: none" >Hide</a>
-<a href="#" onclick="unhideVideo()" style="font-size: 30px; text-decoration: none" >Unhide</a>
+<a  onclick="hideVideo()" style="font-size: 30px; text-decoration: none" >Hide</a>
+<a onclick="unhideVideo()" style="font-size: 30px; text-decoration: none" >Unhide</a>
 <br>
 <table>
 <tr>
