--- a/van2.html
+++ b/van2.html
@@ -5,7 +5,8 @@
   background-color: #FBD603;
   position: fixed;
   left: 40px;
-  top: 1px;
+  bottom: 100px;
+  transition: bottom ease 0.5s;
 }
 a {
       color: blue; 
