--- a/van2.html
+++ b/van2.html
@@ -5,8 +5,7 @@
   background-color: #FBD603;
   position: fixed;
   left: 40px;
-  bottom: 100px;
-  transition: bottom ease 0.5s;
+  top: 100px;
 }
 a {
       color: blue; 
