--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@ a:hover {
 var sentences= 
 [
 
+  ['blackbeauty.mp3', 
+   [
+   [7,3360]
+   ], 'Black Beauty'
+ ],
+
   ['howlifebeginandevolve.mp4', 
    [
    [4,197]
