--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@ a:hover {
 <script>
 var sentences= 
 [
+ ['sleepingbeauty.mp4', 
+   [
+    [1,728]
+   ], 'Sleeping Beauty'
+ ],
+      
  ['thewonderfulwizardofoz1-4.mp3', 
    [
    [5,1256]
