--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@ var sentences=
     [1,728]
    ], 'Sleeping Beauty'
  ],
+ ['beautyandthebeast.mp3', 
+   [
+    [1,755]
+   ], 'Beauty and the Beast'
+ ],
       
  ['thewonderfulwizardofoz1-4.mp3', 
    [
