--- a/index.html
+++ b/index.html
@@ -15,6 +15,26 @@ a:hover {
 <script>
 var sentences= 
 [
+  ['rapunzel.mp4', 
+   [
+    [1,756]
+   ], 'Rapunzel'
+ ],    
+  ['snowwhite.mp4', 
+   [
+    [1,718]
+   ], 'Snow White'
+ ],    
+  ['cinderella.mp4', 
+   [
+    [1,745]
+   ], 'Cinderella'
+ ],
+ ['altairandvega.mp3', 
+   [
+    [1,580]
+   ], 'Altair and Vega'
+ ],
  ['sleepingbeauty.mp4', 
    [
     [1,728]
