--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@ a:hover {
 <script>
 var sentences= 
 [
+  ['hanselandgrettel.mp3', 
+   [
+    [1,755],
+   ], 'Hansel and Grettel'
+ ],      
   ['rapunzel.mp4', 
    [
     [1,756]
