--- a/index.html
+++ b/index.html
@@ -15,9 +15,14 @@ a:hover {
 <script>
 var sentences= 
 [
+   ['thewolfand7lambs.mp4', 
+   [
+    [1,354]
+   ], 'The wolf and 7 lambs'
+ ],   
   ['hanselandgrettel.mp3', 
    [
-    [1,755],
+    [1,755]
    ], 'Hansel and Grettel'
  ],      
   ['rapunzel.mp4', 
@@ -134,7 +139,7 @@ var sentences=
 
 ['theprincessandthepea.mp4', 
    [
-[5,324],
+[5,324]
 ], 'The Princess and the Pea'
  ],
 
@@ -158,7 +163,7 @@ var sentences=
 
  ['threebillygoatsgruff.mp3', 
    [
-    [0,539],
+    [0,539]
    ], 'Three Billy Goats Gruff'
  ],
  
