--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@ a:hover {
 <script>
 var sentences= 
 [
+    ['goldilocksandthe3bears.mp4', 
+   [
+    [1,283]
+   ], 'Goldilocks and the 3 bears'
+ ],   
    ['thewolfand7lambs.mp4', 
    [
     [1,354]
