--- a/index.html
+++ b/index.html
@@ -15,6 +15,23 @@ a:hover {
 <script>
 var sentences= 
 [
+   ['congkin.mp4', 
+   [
+    [5,131],
+    [131,307]
+   ], 'Nét Cong Kín'
+ ],    
+['mocnguoc.mp4', 
+   [
+    [1,9],
+     [9,19]
+   ], 'Móc Ngược'
+ ],    
+  ['a.mp4', 
+   [
+    [1,34]
+   ], 'Chữ a thường'
+ ],      
     ['goldilocksandthe3bears.mp4', 
    [
     [1,283]
