--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@ var sentences=
     [1,34]
    ], 'Chữ a thường'
  ],      
+ ['netkhuyettren.mp4', 
+   [
+    [1,143]
+   ], 'Nét Khuyết Trên'
+ ],   
     ['goldilocksandthe3bears.mp4', 
    [
     [1,283]
