--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@ var sentences=
    [
     [1,143]
    ], 'Nét Khuyết Trên'
+ ],
+   ['netthattren.mp4', 
+   [
+    [1,26]
+   ], 'Nét Thắt Trên'
  ],   
     ['goldilocksandthe3bears.mp4', 
    [
