--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@ var sentences=
    [
     [1,26]
    ], 'Nét Thắt Trên'
+ ],
+['b.mp4', 
+   [
+    [7,477]
+   ], 'Chữ b thường'
  ],   
     ['goldilocksandthe3bears.mp4', 
    [
