--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@ var sentences=
     [7,477]
    ], 'Chữ b thường'
  ], 
+ ['ba_be.mp4', 
+   [
+    [43,136]
+   ], 'Chữ bà thường'
+ ],      
 ['c_ca.mp4', 
    [
     [1,57]
