--- a/index.html
+++ b/index.html
@@ -73,7 +73,12 @@ var sentences=
     [57,190]
    ], 'Chữ cá thường'
  ], 
-      
+
+['o.mp4', 
+   [
+    [1,73]
+   ], 'Chữ ơ thường'
+ ], 
       
     ['goldilocksandthe3bears.mp4', 
    [
