--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@ var sentences=
     [1,73]
    ], 'Chữ ơ thường'
  ], 
+['o2.mp4', 
+   [
+    [1,60]
+   ], 'Chữ ô thường'
+ ],
       
     ['goldilocksandthe3bears.mp4', 
    [
