--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@ var sentences=
     [1,60]
    ], 'Chữ ô thường'
  ],
+['v.mp4', 
+   [
+    [1,40]
+   ], 'Chữ v thường'
+ ],
       
     ['goldilocksandthe3bears.mp4', 
    [
