--- a/index.html
+++ b/index.html
@@ -95,7 +95,12 @@ var sentences=
     [1,40]
    ], 'Chữ v thường'
  ],
-      
+  ['e.mp4', 
+   [
+    [1,173],
+    [173,310]
+   ], 'Chữ e và ê thường'
+ ],    
     ['goldilocksandthe3bears.mp4', 
    [
     [1,283]
